# llm_clustering

./: .gitignore  DEMO_SAMPLE_TEST_SUMMARY.md  LIBRARY_API_READY.md  Makefile  README.md  REFACTORING_COMPLETE.md  STANDALONE_EXAMPLE_QUICKSTART.txt  SUMMARY.md  TESTING_COMPLETE.md  TESTING_REPORT_demo_sample.md  env.example  examples.py  pyproject.toml  quickstart.md  requirements.txt  test_demo_optimized.py
ai_doc/: CHANGELOG_SIMPLE_LLM.md  README.md  REFACTOR_STAGES_1_2_SUMMARY.md  SIMPLIFIED_CUSTOM_LLM.md  TESTING_REPORT_REFACTOR.md  demo_data.md  library_api_changes.md  library_usage.md  llm_cluster_spec.md  parallel_inference.md  quickstart.md  standalone_example.md  unified_input_file.md
ai_experiments/: README.md
doc/: adding_custom_provider.md
examples/: standalone_ollama_example.py
src/llm_clustering/: __init__.py  __main__.py  api.py  main.py
src/llm_clustering/clustering/: __init__.py  base_llm_component.py  clusterer.py  judge.py  proposer.py  registry.py  schemas.py  utils.py
src/llm_clustering/config/: __init__.py  settings.py
src/llm_clustering/core/: __init__.py
src/llm_clustering/data/: __init__.py  subs_dataset.py
src/llm_clustering/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  simple_provider.py  triton_provider.py
src/llm_clustering/llm/prompts/: __init__.py  assignment_judge.py  cluster_proposer.py  prompt_logger.py  template.py
src/llm_clustering/monitoring/: __init__.py  cohesion.py
src/llm_clustering/pipeline/: __init__.py  batch_builder.py  runner.py
src/llm_clustering/utils/: __init__.py  logger.py  metrics.py
tests/: test_batch_builder.py  test_registry.py  test_subs_dataset.py
